--- a/install
+++ b/install
@@ -13,7 +13,7 @@ yay -S --needed - < yaylist.txt
 [ -f ~/.xprofile ] && . ~/.xprofile
 exec i3
 
-sh -c 'curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs \\n       https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
+sh -c 'curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
 
 git clone https://github.com/olivierlemoal/i3-swap-focus
 cd i3-swap-focus
